--- a/draft-ietf-netconf-rfc7895bis.org
+++ b/draft-ietf-netconf-rfc7895bis.org
@@ -76,6 +76,9 @@ The following terms are defined in ^RFC7950^:
 - submodule
 - data node
 
+This document uses the phrase "implementing a module" as defined in
+^RFC7950^ Section 5.6.5.
+
 The following terms are defined in ^I-D.ietf-netmod-revised-datastores^:
 
 - datastore
